src/objects/MentorCourseAssignment__c.object
<CustomObject>
    <description>This object holds the mentor course assignments, it is a one to many relationship as a Mentor can be assigned to more than course.</description>
    <fields>
        <fullName>AcademicTableKey__c</fullName>
        <externalId>true</externalId>
        <label>AcademicTableKey</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ActiveChk__c</fullName>
        <description>This is the course code i.e. LET1</description>
        <label>Active</label>
        <picklist>
            <picklistValues>
                <fullName>True</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>False</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ActivityDate__c</fullName>
        <label>Activity Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CourseNumber__c</fullName>
        <label>Course Number</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsTestData__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Field to indicate if the record is a test record</description>
        <label>Is Test Data</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MentorOfficeHours__c</fullName>
        <label>Mentor Office Hours</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>MentorPidm__c</fullName>
        <description>This stores the mentor pidm so we can do the lookup.</description>
        <label>Mentor Pidm</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mentor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Mentor</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Mentor_Course_Assignments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>NEW_Id__c</fullName>
        <description>A temporary holding field for the new SF ID of this record (person account conversion).</description>
        <label>NEW_Id</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>OLD_Id__c</fullName>
        <description>A temporary holding field for the SF ID of this record, to be used for data migration from a person account org to a non-person account org. Declared as External Id for Upsert operations via the SOAP, REST, or BULK APIs.</description>
        <externalId>true</externalId>
        <label>OLD_Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WGUCourse__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>WGU Course</label>
        <referenceTo>WGUCourse__c</referenceTo>
        <relationshipLabel>Mentor Course Assignments</relationshipLabel>
        <relationshipName>Mentor_Course_Assignments</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Mentor Course Assignment</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>ActiveChk__c</columns>
        <columns>ActivityDate__c</columns>
        <columns>CourseNumber__c</columns>
        <columns>Mentor__c</columns>
        <columns>MentorOfficeHours__c</columns>
        <columns>WGUCourse__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Mentor Course Assignment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Mentor Course Assignments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>